--- a/src/main/webapp/resources/css/header2.css
+++ b/src/main/webapp/resources/css/header2.css
@@ -9,4 +9,11 @@
 .img-fix2{
     top:40px;
 }
+
+
+.btn-style-three .btn-title:before {
+    background-color: rgb(112,191,187) !important;
+}
+
+
 /* 배경색 수정 끝 */
