--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -26,6 +26,15 @@ font-family: 'Open Sans', sans-serif;
 @import url('jquery.touchspin.css');
 
 /*** 
+/* 모해 사이트 폰트 */
+@font-face {
+    font-family: 'GmarketSansMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/*** 
 
 ====================================================================
 	Reset
@@ -40,6 +49,7 @@ font-family: 'Open Sans', sans-serif;
 	outline:none;
 	font-size: 100%;
 	line-height: inherit;
+	font-family: 'GmarketSansMedium';
 }
 
 /*** 
@@ -59,7 +69,9 @@ body {
 	background:#ffffff;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
-	font-family: 'Open Sans', sans-serif;
+/* 	font-family: 'Open Sans', sans-serif; */
+	font-family: 'GmarketSansMedium';
+	
 }
 
 a{
@@ -80,7 +92,8 @@ h1,h2,h3,h4,h5,h6 {
 	margin:0px;
 	background:none;
 	line-height:1.25em;
-	font-family: 'Yeseva One', cursive;
+/* 	font-family: 'Yeseva One', cursive; */
+	font-family: 'GmarketSansMedium';
 }
 
 textarea{
@@ -832,7 +845,8 @@ img{
 .main-menu .navigation{
 	position:relative;
 	margin:0px;
-	font-family: 'Open Sans', sans-serif;
+/* 	font-family: 'Open Sans', sans-serif; */
+	font-family: 'GmarketSansMedium';
 }
 
 .main-menu .navigation > li{
@@ -908,7 +922,8 @@ img{
 }
 
 .main-menu .navigation > li.dropdown > a:after{
-	font-family: 'Font Awesome 5 Free';
+/* 	font-family: 'Font Awesome 5 Free'; */
+	font-family: 'GmarketSansMedium';
 	content: "\f107";
 	position:absolute;
 	right:-14px;
@@ -1005,7 +1020,8 @@ img{
 }
 
 .main-menu .navigation > li > ul > li.dropdown > a:after{
-	font-family: 'Font Awesome 5 Free';
+/* 	font-family: 'Font Awesome 5 Free'; */
+	font-family: 'GmarketSansMedium';
 	content: "\f105";
 	position:absolute;
 	right:16px;
@@ -1099,7 +1115,8 @@ img{
 }
 
 .main-menu .navigation > li > ul > li > ul > li.dropdown > a:after{
-	font-family: 'Font Awesome 5 Free';
+/* 	font-family: 'Font Awesome 5 Free'; */
+	font-family: 'GmarketSansMedium';
 	content: "\f105";
 	position:absolute;
 	right:16px;
@@ -1270,7 +1287,8 @@ img{
 	font-size:20px;
 	font-weight:600;
 	color:#ffffff;
-	font-family: 'Open Sans', sans-serif;
+/* 	font-family: 'Open Sans', sans-serif; */
+	font-family: 'GmarketSansMedium';
 	margin-bottom:20px;
 	letter-spacing:1px;
 	text-align:center;	
