--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -49,7 +49,6 @@ font-family: 'Open Sans', sans-serif;
 	outline:none;
 	font-size: 100%;
 	line-height: inherit;
-	font-family: 'GmarketSansMedium';
 }
 
 /*** 
@@ -69,8 +68,7 @@ body {
 	background:#ffffff;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
-/* 	font-family: 'Open Sans', sans-serif; */
-	font-family: 'GmarketSansMedium';
+	font-family: 'Open Sans', sans-serif;
 	
 }
 
@@ -92,8 +90,7 @@ h1,h2,h3,h4,h5,h6 {
 	margin:0px;
 	background:none;
 	line-height:1.25em;
-/* 	font-family: 'Yeseva One', cursive; */
-	font-family: 'GmarketSansMedium';
+	font-family: 'Yeseva One', cursive;
 }
 
 textarea{
@@ -845,8 +842,7 @@ img{
 .main-menu .navigation{
 	position:relative;
 	margin:0px;
-/* 	font-family: 'Open Sans', sans-serif; */
-	font-family: 'GmarketSansMedium';
+	font-family: 'Open Sans', sans-serif;
 }
 
 .main-menu .navigation > li{
@@ -922,8 +918,7 @@ img{
 }
 
 .main-menu .navigation > li.dropdown > a:after{
-/* 	font-family: 'Font Awesome 5 Free'; */
-	font-family: 'GmarketSansMedium';
+	font-family: 'Font Awesome 5 Free';
 	content: "\f107";
 	position:absolute;
 	right:-14px;
@@ -1020,8 +1015,7 @@ img{
 }
 
 .main-menu .navigation > li > ul > li.dropdown > a:after{
-/* 	font-family: 'Font Awesome 5 Free'; */
-	font-family: 'GmarketSansMedium';
+	font-family: 'Font Awesome 5 Free';
 	content: "\f105";
 	position:absolute;
 	right:16px;
@@ -1115,8 +1109,7 @@ img{
 }
 
 .main-menu .navigation > li > ul > li > ul > li.dropdown > a:after{
-/* 	font-family: 'Font Awesome 5 Free'; */
-	font-family: 'GmarketSansMedium';
+	font-family: 'Font Awesome 5 Free';
 	content: "\f105";
 	position:absolute;
 	right:16px;
@@ -1287,8 +1280,7 @@ img{
 	font-size:20px;
 	font-weight:600;
 	color:#ffffff;
-/* 	font-family: 'Open Sans', sans-serif; */
-	font-family: 'GmarketSansMedium';
+	font-family: 'Open Sans', sans-serif;
 	margin-bottom:20px;
 	letter-spacing:1px;
 	text-align:center;	
