10/7 지현 메인페이지 기본기능, 봉사디테일 기본 기능 80%완성

--- a/src/main/webapp/resources/css/bongsaMain.css
+++ b/src/main/webapp/resources/css/bongsaMain.css
@@ -101,8 +101,6 @@
 	color: aliceblue;
 	border-radius: 25px;
 	
-
-
 	
 }
 
@@ -113,5 +111,17 @@
 
 .btn-style-one .btn-title:before {
     background-color: rgb(112,191,187) !important;
+}
+
+.bs-search-main{
+	display: inline;
+	float: right;
+	padding-top: 15px;
+	
+}
+
+
+.bongsa-search-box{
+	margin-bottom: 10px;
 }
 
