--- a/src/main/webapp/resources/css/more.css
+++ b/src/main/webapp/resources/css/more.css
@@ -74,5 +74,23 @@ table{
 	height:500px !important;
 }
 
+#reviewtext{
+   margin:auto;
+   width: 70%;
+   height:500px !important;
+}
 
+.notice-table{
+/*    border: solid black 1px; */
+   padding: 10px;
+/*    width: 120%; */
+   margin:20px;
+}
 
+#notice-content{
+   margin:auto;
+}
+
+.notice-td1{
+ 	width:80%;
+}
