--- a/src/main/webapp/resources/css/bongsaParticipate.css
+++ b/src/main/webapp/resources/css/bongsaParticipate.css
@@ -48,3 +48,11 @@
 .btn-style-one .btn-title:before {
     background-color: rgb(112,191,187) !important;
 }
+
+.donate-form{
+	margin: auto;
+}
+.participate-Main{
+	width: 50%;
+	margin: auto;
+}
