10/12 popup 업데이트 추가 -지윤

--- a/src/main/webapp/resources/css/popup.css
+++ b/src/main/webapp/resources/css/popup.css
@@ -9,6 +9,14 @@
 	heihgt:50px;
 	position:absolute;
 	margin-top:10px;
+	font-size: 16px;
+	font-weight: bold;
+}
+.checkDiv label:hover{
+	color:rgb(112,191,187);
+}
+.checkDiv label:mouseout{
+	color:black;
 }
 .checkDiv input{
 	margin-left:10px;
@@ -26,7 +34,6 @@
      right:150px;
      width:400px; 
      height:530px; 
-     border:1px solid gray;
      display:none;
      background-color: white;
 }
