--- a/src/main/webapp/resources/css_ad/newStyle.css
+++ b/src/main/webapp/resources/css_ad/newStyle.css
@@ -135,7 +135,8 @@
     display: inline-block;
     width:300px;
     height:310px;
-    margin-left:100px;
+    margin-left:70px;
+    margin-bottom:100px;
 }
 
 .user_info_div{
@@ -178,4 +179,5 @@
 #paging a{
 	margin:0 10px;
 }
+
 
