--- a/src/main/webapp/resources/css_ad/newStyle.css
+++ b/src/main/webapp/resources/css_ad/newStyle.css
@@ -101,7 +101,6 @@
     margin-bottom:20px;
     display:inline-block;
     padding:20px;
-    overflow: auto;
 }
 .status_div{
     margin-top:40px;
@@ -123,7 +122,7 @@
 }
 
 .content_right{
-    overflow: auto;
+/*     overflow: auto; */
 }
 
 .div_absol{
