--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -33,3 +33,15 @@ body{
 .fd_title{
 	color: black;
 }
+
+.widget-content ul#cart-ul li{
+	list-style: none;
+	list-style-position: initial;
+}
+.widget-content ul#cart-ul{
+	margin: 0;
+}
+
+.bg-red {
+	background-color: red !important;
+ }
