--- a/src/main/webapp/resources/css/more.css
+++ b/src/main/webapp/resources/css/more.css
@@ -64,11 +64,11 @@ table{
 	height:500px !important;
 }
 
-#reviewtext{
-   margin:auto;
-   width: 70%;
-   height:500px !important;
-}
+/* #reviewtext{ */
+/*    margin:auto; */
+/*    width: 70%; */
+/*    height:500px !important; */
+/* } */
 
 .more-table{
 /*    border: solid black 1px; */
