10/20 오전작업, 마이페이지 봉사 영역 수정 80%

--- a/src/main/webapp/resources/css/bongsaRecruiterMypage.css
+++ b/src/main/webapp/resources/css/bongsaRecruiterMypage.css
@@ -57,3 +57,12 @@
 #recruiting-list, #recruited-list{
 	font-size: x-large;
 }
+
+
+
+.new-con-box{
+	margin-top: 20px;
+}
+.donation-count{
+	margin-bottom: 10px;
+}
