10/21 메인페이지 크기고정 완료

--- a/src/main/webapp/resources/css/bongsaMain.css
+++ b/src/main/webapp/resources/css/bongsaMain.css
@@ -17,8 +17,6 @@
 	text-align: center;
 }
 
-
-
 /* 봉사 메인페이지 썸네일 정보 띄어쓰기 */
 
 /* 썸네일 모집자, 썸네일 모집인원, 모집성공 인원 */
@@ -138,6 +136,19 @@
 
 
 .bongsa-search-box{
-	margin-bottom: 20px;
+	margin-bottom: 50px;
+}
+
+/* 봉사메인리스트 크기고정 */
+
+/* 펀딩리스트 타이틀이미지 크기 */
+
+img.lazy-image.img_size{
+	width: 323.9px;
+	height: 323.9px;
+}
+
+.lower-content{
+	height: 250px;
 }
 
