10/24 봉사참여 상태 마이페이지 표시 변경 완료

--- a/src/main/webapp/resources/css/bongsaMain.css
+++ b/src/main/webapp/resources/css/bongsaMain.css
@@ -142,9 +142,7 @@
 
 /* 봉사메인리스트 크기고정 */
 
-/* 펀딩리스트 타이틀이미지 크기 */
-
-img.lazy-image.img_size{
+img.img_size{
 	width: 323.9px;
 	height: 323.9px;
 }
