--- a/src/main/webapp/resources/css/header2.css
+++ b/src/main/webapp/resources/css/header2.css
@@ -15,5 +15,10 @@
     background-color: rgb(112,191,187) !important;
 }
 
-
-/* 배경색 수정 끝 */
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
