--- a/src/main/webapp/resources/css/header3.css
+++ b/src/main/webapp/resources/css/header3.css
@@ -13,4 +13,10 @@
 .btn-style-one .btn-title:before{
 	background-color: #25283a;	
 }
-/* 배경색 수정 끝 */
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
