1024 버튼 글씨 색상 변경 김보람

--- a/src/main/webapp/resources/css/funding.css
+++ b/src/main/webapp/resources/css/funding.css
@@ -476,7 +476,7 @@ ul.bread-crumb li a span {
 /* 버튼 컬러 바꿈 */
 .btn-style-one .new-btn-title{
     background-color: rgb(112,191,187);
-    color: black;
+    color: white;
 }
 
 /* 주최자마이페이지세부 상태 버튼*/
