10/24 봉사 마지막 수정

--- a/src/main/webapp/resources/css/bongsaDetail.css
+++ b/src/main/webapp/resources/css/bongsaDetail.css
@@ -143,3 +143,7 @@ li> span{
     -ms-transform-origin: top left;
     transform-origin: top left;
 }
+
+.cause-details .inner-box .lower-content{
+	padding-top: 20px;
+}
