1024 주석수정 , 내역없음 css 수정 김보람

--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -118,3 +118,11 @@ td a:hover{
 	transform:translate(-50%, -50%); 
 	padding-top: 30px;
 }
+
+#no-list{
+	position: absolute;
+	top:50%;
+	left: 50%;
+	transform:translate(-50%, -50%);
+	font-size: 24px;
+}
