봉사마이페이지 css 수정

--- a/src/main/webapp/resources/css/bongsaRecruiterMypage.css
+++ b/src/main/webapp/resources/css/bongsaRecruiterMypage.css
@@ -70,3 +70,20 @@
 .new-inner-box{
 	height: 300px;
 }
+
+.widget-content ul.cart-ul li{
+	list-style: none;
+	list-style-position: initial;
+	font-weight: 600;
+	font-family: 'GmarketSansMedium';
+	font-size: 20px;
+	text-align: left;
+	color: black;
+	margin-left: 15px;
+}
+
+.cart-ul:last-child a.jjimlist{
+	font-size: 20px;
+}
+
+
